syntax = "proto3";
package ssc.escrow;

import "gogoproto/gogo.proto";
import "ssc/escrow/params.proto";

option go_package = "github.com/sagaxyz/ssc/x/escrow/types";

message EventDeposit {
  string user = 1;
  string chainlet = 2;
  string denom = 3;
  string amount = 4;
  string newTotal = 5;
}

message EventWithdraw {
  string user = 1;
  string chainlet = 2;
  string denom = 3;
  string remaining = 4;
}